err/ks.reference.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ks'...
Listing './lib/python3.5/site-packages/ks/reference'...
Listing './lib/python3.5/site-packages/ks/reference/browser'...
Listing './lib/python3.5/site-packages/ks/reference/demo'...
Listing './lib/python3.5/site-packages/ks/reference/demo/etc'...
Listing './lib/python3.5/site-packages/ks/reference/etc'...
Listing './lib/python3.5/site-packages/ks/reference/reference'...
Compiling './lib/python3.5/site-packages/ks/reference/reference/referencebase.py'...
***   File "./lib/python3.5/site-packages/ks/reference/reference/referencebase.py", line 46
    raise TypeError, "Object %s must provide interface %s" % (ob, self.__parent1_interface__)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ks/reference/referenceannotation'...
Compiling './lib/python3.5/site-packages/ks/reference/referenceannotation/referenceannotation.py'...
***   File "./lib/python3.5/site-packages/ks/reference/referenceannotation/referenceannotation.py", line 73
    except AttributeError, msg:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ks/reference/referencehandlers'...
Compiling './lib/python3.5/site-packages/ks/reference/referencehandlers/referencehandlers.py'...
***   File "./lib/python3.5/site-packages/ks/reference/referencehandlers/referencehandlers.py", line 57
    except(KeyError), msg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ks/reference/referencezcml'...
Listing './lib/python3.5/site-packages/ks.reference-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
